prevent label text wrapping in table btns + set page max width

--- a/bag_transfer/static/css/styles.css
+++ b/bag_transfer/static/css/styles.css
@@ -1,3 +1,7 @@
+.container {
+	max-width: 1600px;
+}
+
 main .container {
 	margin: 0 15px;
 
@@ -82,6 +86,7 @@ h1 {
 	padding: 3px;
 	font-weight: bold;
 	margin-bottom: 3px;
+	white-space: nowrap;
 }
 
 /**
